# typst-writer

./: .gitignore  Cargo.toml  README.md  benchmark_report.md  main.typ  test_fidelity.typ  test_packages.typ
.cargo/: config.toml
.github/workflows/: release.yml
assets/: generate_cm_icons.py
dev-tools/: README.md  compare_variants.rs  inspect_ps_names.rs  test_ps_resolve.rs
gpui-component/src/: accordion.rs  actions.rs  alert.rs  checkbox.rs  clipboard.rs  description_list.rs  group_box.rs  icon.rs  inspector.rs  kbd.rs  lib.rs  notification.rs  radio.rs  root.rs  sheet.rs  skeleton.rs  slider.rs  spinner.rs  switch.rs  tooltip.rs  tree.rs  window_border.rs
gpui-component/src/avatar/: avatar.rs  avatar_group.rs
gpui-component/src/button/: button_group.rs  dropdown_button.rs  toggle.rs
gpui-component/src/chart/: area_chart.rs  line_chart.rs  pie_chart.rs
gpui-component/src/dock/: dock.rs  mod.rs  stack_panel.rs  tab_panel.rs  tiles.rs
gpui-component/src/form/: field.rs
gpui-component/src/highlighter/: highlighter.rs  registry.rs
gpui-component/src/input/: blink_cursor.rs  element.rs  mode.rs  movement.rs  rope_ext.rs  selection.rs  state.rs
gpui-component/src/list/: list_item.rs
gpui-component/src/menu/: app_menu_bar.rs  context_menu.rs  dropdown_menu.rs  menu_item.rs  popup_menu.rs
gpui-component/src/plot/: axis.rs  label.rs  mod.rs  tooltip.rs
gpui-component/src/resizable/: mod.rs  (+1 more)
src/: compiler.rs  font_provisioner.rs  geometry.rs  lib.rs  main.rs  painter.rs
src/core/: config.rs  font.rs  lsp.rs  mod.rs
src/ui/: mod.rs  workspace.rs
(+50 files in other folders)
