[package]
name = "typst-writer"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "typst-writer"
path = "src/main.rs"

[dependencies]
gpui = "0.2.2"
gpui-component = { path = "./gpui-component" }
codebook-tree-sitter-typst = "0.12.1"
tree-sitter = "0.25.4"
rowan = "0.16.1"
typst = "0.14.2"
typst-pdf = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
ttf-parser = "0.25"
lsp-types = "0.97.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
chrono = "0.4"
notify = "7.0"
futures = "0.3"
ropey = "1.6"
url = "2.5"
fontdb = "0.23.0"
rfd = "0.17.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = 1
split-debuginfo = "unpacked"

# Optimize dependencies in dev profile for smooth UI performance
[profile.dev.package."*"]
opt-level = 3
